--- a/.github/workflows/build-test-server.yml
+++ b/.github/workflows/build-test-server.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - main
-    paths: ['sc-server/**']
+    paths: ['sc-server/**', '.github/workflows/deployment.yml']
 
 jobs:
   build-and-test:
@@ -20,9 +20,7 @@ jobs:
           filters: |
             server:
               - 'sc-server/**'
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+              - '.github/workflows/deployment.yml'
 
       - name: Build Docker image
         if: steps.filter.outputs.server == 'true'
