chore: update build-test-server workflow paths to reference the correct (#22)
* chore: update build-test-server workflow paths and improve test command

* chore: rename build-test-server workflow to docker-build and update paths

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - main
-    paths: ['sc-server/**', '.github/workflows/deployment.yml']
+    paths: ['sc-server/**', '.github/workflows/docker-build.yml']
 
 jobs:
   build-and-test:
@@ -20,7 +20,7 @@ jobs:
           filters: |
             server:
               - 'sc-server/**'
-              - '.github/workflows/deployment.yml'
+              - '.github/workflows/docker-build.yml'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -29,12 +29,12 @@ jobs:
         if: steps.filter.outputs.server == 'true'
         uses: docker/build-push-action@v6
         with:
-          context: '{{defaultContext}}:sc-server'
+          context: './sc-server'
           push: false
           load: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/sc-server:test
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/sc_server
 
-      - name: Run tests in Docker
+      - name: Run docker container
         if: steps.filter.outputs.server == 'true'
         run: |
-          docker run --rm ${{ secrets.DOCKERHUB_USERNAME }}/sc-server:test /bin/sh -c "curl localhost:3000"
+          docker run -d --rm ${{ secrets.DOCKERHUB_USERNAME }}/sc_server
