--- a/sc-server/.env.example
+++ b/sc-server/.env.example
@@ -8,3 +8,11 @@ JWT_SECRET=sc_server
 JWT_EXPIRATION_TIME=7d
 
 DATABASE_URL="postgresql://postgres:password@localhost:5432/your_db?schema=public"
+
+# Redis
+REDIS_URL=redis://user:password@localhost:6379
+
+# Mail
+MAIL_HOST=smtp.example.com
+MAIL_USER=user@example.com
+MAIL_PASSWORD=
