--- a/sc-server/package.json
+++ b/sc-server/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.1.2",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.4.12",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -35,9 +36,13 @@
     "@prisma/client": "^6.0.1",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
+    "cache-manager": "5",
+    "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ejs": "^3.1.10",
     "express-rate-limit": "^7.4.1",
+    "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
